# sentc

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
crypto/: Cargo.toml
crypto/src/: lib.rs  test_fn.rs  user.rs  util.rs  util_pub.rs  util_server.rs
crypto/src/alg/: mod.rs
crypto/src/alg/asym/: ecies.rs  mod.rs
crypto/src/alg/pw_hash/: argon2.rs  mod.rs
crypto/src/alg/sign/: ed25519.rs  mod.rs
crypto/src/alg/sym/: aes_gcm.rs  mod.rs
crypto/src/core/: mod.rs  user.rs
crypto/src/crypto/: crypto.rs  crypto_export.rs  crypto_rust.rs  mimic_keys.rs  mod.rs
crypto/src/crypto_searchable/: crypto_searchable.rs  crypto_searchable_export.rs  crypto_searchable_rust.rs  mod.rs
crypto/src/crypto_sortable/: crypto_sortable.rs  crypto_sortable_export.rs  crypto_sortable_rust.rs  mod.rs
crypto/src/entities/: group.rs  keys.rs  mod.rs  user.rs
crypto/src/error/: mod.rs
crypto/src/file/: file.rs  file_export.rs  file_rust.rs  mod.rs
crypto/src/group/: group.rs  group_export.rs  group_rank_check.rs  group_rust.rs  mod.rs
crypto/src/keys/: fips.rs  mod.rs  rec.rs  std.rs
crypto/src/user/: mod.rs  user.rs  user_export.rs  user_rust.rs
crypto/src/util/: mod.rs  public.rs  server.rs  util_non_rust.rs  util_rust.rs
crypto/src/util_req_full/: mod.rs
crypto/src/util_req_full/file/: file_export.rs  mod.rs
crypto/src/util_req_full/group/: group_export.rs  mod.rs
crypto/src/util_req_full/user/: mod.rs  user_export.rs
crypto_common/: Cargo.toml
crypto_common/src/: crypto.rs  group.rs  lib.rs  user.rs
crypto_core/: Cargo.toml
crypto_core/src/: crypto.rs  cryptomat.rs  error.rs  group.rs  lib.rs  user.rs
crypto_core/src/alg/: mod.rs
crypto_core/src/alg/asym/: ecies.rs  ecies_kyber_hybrid.rs  mod.rs  pqc_kyber.rs
crypto_core/src/alg/hmac/: hmac_sha256.rs  mod.rs
crypto_core/src/alg/pw_hash/: argon2.rs  mod.rs
crypto_core/src/alg/sign/: ed25519.rs  ed25519_dilithium_hybrid.rs  mod.rs  pqc_dilithium.rs
crypto_core/src/alg/sortable/: mod.rs  ope.rs
crypto_core/src/alg/sym/: aes_gcm.rs  mod.rs
crypto_core/src/error/: mod.rs
crypto_core/src/mods/: mod.rs  user.rs
crypto_core/tests/: group.rs  user.rs
crypto_core_tests/: Cargo.toml
crypto_full/: Cargo.toml
crypto_full/src/: error.rs  lib.rs
crypto_full/src/content/: mod.rs  non_rust.rs  rust.rs
crypto_full/src/crypto/: mod.rs  non_rust.rs  rust.rs
crypto_full/src/file/: mod.rs  non_rust.rs  rust.rs
crypto_full/src/group/: mod.rs  non_rust.rs  rust.rs
crypto_full/src/user/: mod.rs  non_rust.rs  rust.rs
crypto_full/src/util/: jwt.rs  mod.rs
crypto_full/src/util/http/: http_reqwest.rs  http_wasm.rs  mod.rs
crypto_keys/crypto_fips_keys/: Cargo.toml
crypto_keys/crypto_fips_keys/src/: lib.rs  sdk.rs
crypto_keys/crypto_fips_keys/src/core/: asym.rs  hmac.rs  mod.rs  pw_hash.rs  sign.rs  sortable.rs  sym.rs
crypto_keys/crypto_fips_keys/src/util/: export.rs  mod.rs
crypto_keys/crypto_fips_keys/tests/: core_group.rs  core_user.rs  sdk_crypto.rs  sdk_group.rs  sdk_searchable.rs  sdk_test_fn.rs  sdk_user.rs
crypto_keys/crypto_rec_keys/: Cargo.toml
crypto_keys/crypto_rec_keys/src/: lib.rs
crypto_keys/crypto_rec_keys/src/core/: mod.rs  pw_hash.rs  sortable.rs
crypto_keys/crypto_rec_keys/src/util/: export.rs  mod.rs
crypto_keys/crypto_rec_keys/tests/: core_group.rs  core_user.rs
crypto_keys/crypto_std_keys/: Cargo.toml
crypto_keys/crypto_std_keys/src/: lib.rs
crypto_keys/crypto_std_keys/src/core/: mod.rs
crypto_keys/crypto_std_keys/src/util/: export.rs  mod.rs
crypto_keys/crypto_std_keys/tests/: core_group.rs
crypto_light/: Cargo.toml
crypto_light/src/: error.rs  group.rs  lib.rs
crypto_light/src/user/: mod.rs  user.rs  user_rust.rs
crypto_light/src/util_req_full/: mod.rs
crypto_light/src/util_req_full/group/: mod.rs  rust.rs
crypto_light/src/util_req_full/user/: mod.rs  non_rust.rs  rust.rs
crypto_light_full/: Cargo.toml
crypto_light_full/src/: lib.rs
crypto_light_full/src/group/: mod.rs  non_rust.rs  rust.rs
crypto_light_full/src/user/: mod.rs  non_rust.rs  rust.rs
crypto_utils/: Cargo.toml
crypto_utils/src/: error.rs  group.rs  jwt.rs  keys.rs  lib.rs  user.rs
crypto_utils/src/cryptomat/: crypto.rs  macros.rs  mod.rs
crypto_utils/src/full/: user.rs
crypto_utils/src/http/: http_reqwest.rs  http_wasm.rs  mod.rs
crypto_utils/src/keys/: mod.rs
crypto_utils/src/keys/crypto/: asym.rs  mod.rs  searchable.rs  sign.rs  sortable.rs  symmetric_key.rs
flutter/: Cargo.toml  (+2 more)
flutter/sendclose/rust/: Cargo.toml
flutter/sendclose/rust/src/: bridge_generated.rs  sendclose.rs
implementation/dart/sentc/rust/: Cargo.toml
implementation/dart/sentc_flutter_rust/: Cargo.toml  flutter_rust_bridge.yaml
implementation/dart/sentc_flutter_rust/.cargo/: config.toml
implementation/dart/sentc_flutter_rust/scripts/: build-android.sh  build-apple.sh  build-other.sh
implementation/dart/sentc_flutter_rust/src/: bridge_generated.io.rs  bridge_generated.rs  frb_generated.rs  lib.rs  sentc.rs
implementation/dart/sentc_flutter_rust_light/: Cargo.toml  flutter_rust_bridge.yaml
implementation/dart/sentc_flutter_rust_light/scripts/: build-android.sh  build-apple.sh  build-other.sh  generate_code.sh
implementation/dart/sentc_flutter_rust_light/src/: bridge_generated.io.rs  bridge_generated.rs  frb_generated.rs  lib.rs  sentc.rs
implementation/js/sentc_wasm/: Cargo.toml  LICENSE  babel.config.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  webpack.config.js
implementation/js/sentc_wasm/lib/: AbstractCrypto.ts  Enities.ts  Group.ts  Sentc.ts  User.ts  index.ts
implementation/js/sentc_wasm/pkg/: package.json
implementation/js/sentc_wasm_light/: Cargo.toml  package-lock.json  package.json
implementation/js/sentclose_wasm/: Cargo.toml
implementation/nodejs/sentc_node_js_rust/: .npmignore  Cargo.toml  build.sh  index.d.ts  index.js  package.json
implementation/uniffi/sentc_uniffi_bindgen/: Cargo.toml
implementation/uniffi/sentc_uniffi_rust/: Cargo.toml
(+300 files in other folders)
