[workspace]
resolver = "2"
members = [
    "crypto",
    "crypto_core",
    "crypto_full",
    "crypto_utils",
    "crypto_light",
    "crypto_light_full",
    "implementation/js/sentc_wasm",
    "implementation/js/sentc_wasm_light",
    "implementation/dart/sentc_flutter_rust",
    "implementation/dart/sentc_flutter_rust_light"
]

[workspace.package]
version = "0.11.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
homepage = "https://sentc.com/"
documentation = "https://sentc.com/"
repository = "https://github.com/sentclose/sentc"

[workspace.dependencies]
sentc-crypto-common = {version = "0.10.0", git = "https://github.com/sentclose/sentc-common.git", rev = "de513a82b0200b476d9592ba1de38c73c6a32354"}
#sentc-crypto-common = { path = "../backend/sentc-api/sdk-common" }    # for local dev

sentc-crypto-core = {version = "0.11.0", path = "crypto_core"}
sentc-crypto-utils = {version = "0.11.0", path = "crypto_utils"}
sentc-crypto = {version = "0.11.0", path = "crypto", default-features = false}
sentc-crypto-full = {version = "0.11.0", path = "crypto_full", default-features = false}
sentc-crypto-light = {version = "0.11.0", path = "crypto_light", default-features = false}
sentc-crypto-light-full = {version = "0.11.0", path = "crypto_light_full", default-features = false}

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
lto = true
panic = "abort"
strip = true

[profile.release.package.sentc_wasm]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
codegen-units = 1

[profile.release.package.sentc_wasm_light]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
codegen-units = 1