[workspace]
resolver = "2"
members = [
    "crypto",
    "crypto_core",
    "crypto_utils",
    "crypto_light",
    "implementation/js/sentc_wasm",
    "implementation/js/sentc_wasm_light",
    "implementation/dart/sentc_flutter_rust",
    "implementation/dart/sentc_flutter_rust_light",
    "implementation/nodejs/sentc_node_js_rust",
    "crypto_keys/crypto_std_keys",
    "crypto_keys/crypto_fips_keys",
    "crypto_keys/crypto_rec_keys",
    "implementation/uniffi/sentc_uniffi_rust",
    "implementation/uniffi/sentc_uniffi_bindgen",
]

[workspace.package]
version = "0.16.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
homepage = "https://sentc.com/"
documentation = "https://sentc.com/"
repository = "https://github.com/sentclose/sentc"
rust-version = "1.75.0"

[workspace.dependencies]
#sentc-crypto-common = { version = "0.12.0", git = "https://github.com/sentclose/sentc-common.git", rev = "06cd7002a19d406807f9443ddfcd993bf9a46651" }
sentc-crypto-common = { path = "../../backend/sentc-api/sdk-common" } # for local dev

sentc-crypto-core = { version = "0.15.0", path = "crypto_core" }
sentc-crypto-utils = { version = "0.16.0", path = "crypto_utils" }
sentc-crypto = { version = "0.16.0", path = "crypto", default-features = false }
sentc-crypto-light = { version = "0.16.0", path = "crypto_light", default-features = false }
sentc-crypto-std-keys = { version = "0.16.0", path = "crypto_keys/crypto_std_keys" }
sentc-crypto-fips-keys = { version = "0.16.0", path = "crypto_keys/crypto_fips_keys" }
sentc-crypto-rec-keys = { version = "0.16.0", path = "crypto_keys/crypto_rec_keys" }

#key export
# must use this version because it is not comp. with password_hash from argon2
base64ct = { version = "1.0.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
lto = true
panic = "abort"
strip = true

[profile.release.package.sentc_wasm]
opt-level = "z"
overflow-checks = false
debug = 0
debug-assertions = false
codegen-units = 1

[profile.release.package.sentc_wasm_light]
opt-level = "z"
overflow-checks = false
debug = 0
debug-assertions = false
codegen-units = 1
