[package]
name = "sentc-crypto"
version = "0.9.0"
edition = "2021"
description = "The main implementation of the sentc sdk."
license-file = "../LICENSE"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
homepage = "https://sentc.com/"
documentation = "https://sentc.com/"
repository = "https://github.com/sentclose/sentc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentc-crypto-core = {version = "0.9.0", path = "../crypto_core"}
sentc-crypto-common = {workspace=true}

# key and data export
base64ct = {version = "1.0.1", default-features = false, features = ["alloc"]}  # must use this version because it is not comp. with password_hash from argon2
pem-rfc7468 = {version = "0.3.1", features = ["alloc"]}

# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}

[features]
default = []
rust = []

server = []
server_test = []