[package]
name = "sentc-crypto"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "The main implementation of the sentc sdk."

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-core = { workspace = true }
sentc-crypto-utils = { workspace = true, features = ["encryption"] }
sentc-crypto-common = { workspace = true }

# key and data export
base64ct = { version = "1.0.1", default-features = false, features = ["alloc"] }  # must use this version because it is not comp. with password_hash from argon2
pem-rfc7468 = { version = "0.3.1", features = ["alloc"] }

# json handling
serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[features]
default = []
rust = []

server = []
server_test = []

full_rustls = ["sentc-crypto-utils/crypto_full", "sentc-crypto-utils/rustls"]
full_wasm = ["sentc-crypto-utils/crypto_full", "sentc-crypto-utils/wasm"]