[package]
name = "sentc-crypto"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "The main implementation of the sentc sdk."

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-core = { workspace = true }
sentc-crypto-utils = { workspace = true, features = ["encryption"] }
sentc-crypto-common = { workspace = true }
sentc-crypto-std-keys = { workspace = true, features = ["full"], optional = true }
sentc-crypto-fips-keys = { workspace = true, features = ["full"], optional = true }
sentc-crypto-rec-keys = { workspace = true, features = ["full"], optional = true }

# key and data export
base64ct.workspace = true

# json handling
serde_json.workspace = true
serde.workspace = true

[features]
export = ["std_keys"]
std_keys = ["sentc-crypto-std-keys"]

fips_keys = ["sentc-crypto-fips-keys"]

rec_keys = ["sentc-crypto-rec-keys"]

server = []
server_test = []

full_rustls = ["sentc-crypto-utils/crypto_full", "sentc-crypto-utils/rustls"]
full_wasm = ["sentc-crypto-utils/crypto_full", "sentc-crypto-utils/wasm"]