[package]
name = "sentc-crypto-core"
version.workspace = true
edition.workspace = true
description = "The core of sentc encryption sdk with all alg."
license-file.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
aes-gcm = "0.9.4"
# pre here because we must use rand_core version 0.6.3 under the hood but the actual version of x25519-dalek uses version 0.5
curve25519-dalek = {version = "3.2.0", default-features = false, features = ["u64_backend", "alloc"]}
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10.2", default-features = false }
hkdf = { version = "0.12.3", default-features = false }
hmac = "0.12.1"
argon2 = "0.3"
ope = "0.1.1"
pqc_kyber = {version = "0.7.1", features = ["90s-fixslice", "std"]}

[features]
default = ["argon2_aes_ecies_ed25519_kyber_hybrid", "default_env"]

# Descibe the used alg for encryption and signing
argon2_aes_ecies_ed25519 = []

argon2_aes_ecies_ed25519_kyber_hybrid = []

# Descibe the used env for the crng
default_env = []