[package]
name = "sentc-crypto-core"
#version.workspace = true
version = "0.14.0"
edition.workspace = true
description = "The core of sentc encryption sdk with all alg."
license-file.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10.2", default-features = false }

[features]
default = ["default_env"]

# Descibe the used env for the crng
default_env = []