[package]
name = "sentc-crypto-full"
version = "0.9.0"
edition = "2021"
description = "The network implementation for the sentc sdk."
license-file = "../LICENSE"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
homepage = "https://sentc.com/"
documentation = "https://sentc.com/"
repository = "https://github.com/sentclose/sentc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*",
]

[dependencies]
# own crypto lib
sentc-crypto = {workspace=true}

sentc-crypto-common = {workspace=true}

sentc-crypto-utils = {workspace=true}

#_______________________________________________________________________________________________________________________

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}

[features]
default = ["sentc-crypto/default", "rustls"]

rust = ["sentc-crypto/rust"]

# req handling
rustls = ["sentc-crypto-utils/rustls"]
wasm = ["sentc-crypto-utils/wasm"]