[package]
name = "sentc-crypto-full"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true

description = "The network implementation for the sentc sdk."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
# own crypto lib
sentc-crypto = { workspace = true }

sentc-crypto-common = { workspace = true }

sentc-crypto-utils = { workspace = true, features = ["crypto_full", "encryption"] }

#_______________________________________________________________________________________________________________________

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }

[features]
default = ["sentc-crypto/default", "rustls"]

rust = ["sentc-crypto/rust"]

# req handling
rustls = ["sentc-crypto-utils/rustls"]
wasm = ["sentc-crypto-utils/wasm"]