[package]
name = "sentc-crypto-light"
version = "0.10.0"
edition = "2021"
license-file = "../LICENSE"
description = "The main implementation of the sentc light sdk."
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
homepage = "https://sentc.com/"
documentation = "https://sentc.com/"
repository = "https://github.com/sentclose/sentc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-common = {workspace=true}
sentc-crypto-core = {workspace=true}
sentc-crypto-utils = {workspace=true}

# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}

# key and data export
base64ct = {version = "1.0.1", default-features = false, features = ["alloc"]}  # must use this version because it is not comp. with password_hash from argon2
pem-rfc7468 = {version = "0.3.1", features = ["alloc"]}

[features]
default = []
rust = []

server_test = []