[package]
name = "sentc-crypto-light"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true

description = "The main implementation of the sentc light sdk."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-common = { workspace = true }
sentc-crypto-core = { workspace = true }
sentc-crypto-utils = { workspace = true }
sentc-crypto-std-keys = { workspace = true, features = ["wrapper"] }

# json handling
serde_json.workspace = true
serde.workspace = true

# key and data export
base64ct.workspace = true

[features]
export = []

server_test = []

full_rustls = ["sentc-crypto-utils/crypto_full", "sentc-crypto-utils/rustls"]
full_wasm = ["sentc-crypto-utils/crypto_full", "sentc-crypto-utils/wasm"]