[package]
name = "sentc-crypto-light-full"
version = "0.10.0"
edition = "2021"
description = "The network implementation for the sentc light sdk."
license-file = "../LICENSE"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
homepage = "https://sentc.com/"
documentation = "https://sentc.com/"
repository = "https://github.com/sentclose/sentc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-common = {workspace=true}
sentc-crypto-light = {workspace=true}
sentc-crypto-utils = {workspace=true}

[features]
default = ["sentc-crypto-light/default", "rustls"]

rust = ["sentc-crypto-light/rust"]

# req handling
rustls = ["sentc-crypto-utils/rustls"]
wasm = ["sentc-crypto-utils/wasm"]