[package]
name = "sentc-crypto-light-full"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true

description = "The network implementation for the sentc light sdk."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-common = {workspace=true}
sentc-crypto-light = {workspace=true}
sentc-crypto-utils = {workspace=true, features = ["crypto_full"]}

# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}

[features]
default = ["sentc-crypto-light/default", "rustls"]

rust = ["sentc-crypto-light/rust"]

# req handling
rustls = ["sentc-crypto-utils/rustls"]
wasm = ["sentc-crypto-utils/wasm"]