[package]
name = "sentc-crypto-utils"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Common types and functions for sentc sdk and sdk light"

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-common = { workspace = true }

sentc-crypto-core = { workspace = true }

# json handling
serde_json.workspace = true
serde.workspace = true

# key and data export
base64ct.workspace = true
pem-rfc7468 = { version = "0.3.1", features = ["alloc"] }

#_______________________________________________________________________________________________________________________
# req handling
reqwest = { version = "0.13", optional = true, default-features = false }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }

wasm-bindgen = { version = "0.2.74", optional = true }

wasm-bindgen-futures = { version = "0.4.31", optional = true }

web-sys = { version = "0.3.4", optional = true, features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }

js-sys = { version = "0.3.58", optional = true }


[features]
# req handling
rustls = ["reqwest/rustls-no-provider", "dep:rustls"]
rusttls_request_default = ["reqwest/rustls"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]

crypto_full = []
encryption = []