[package]
name = "sentc-crypto-fips-keys"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Fips compliant key impl with openssl"

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-core.workspace = true
sentc-crypto-utils = { workspace = true, optional = true }
sentc-crypto-common = { workspace = true, optional = true }

openssl = { version = "0.10.64", default-features = false }

digest = "0.10.7"

base64ct = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
wrapper = ["sentc-crypto-utils", "sentc-crypto-common", "serde", "serde_json"]
full = ["wrapper", "sentc-crypto-utils/encryption", "base64ct"]