[package]
name = "sentc-crypto-std-keys"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-core.workspace = true
sentc-crypto-utils = { workspace = true, optional = true }
sentc-crypto-common = { workspace = true, optional = true }

aes-gcm = "0.9.4"
# pre here because we must use rand_core version 0.6.3 under the hood but the actual version of x25519-dalek uses version 0.5
curve25519-dalek = { version = "3.2.0", default-features = false, features = ["u64_backend", "alloc"] }
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10.2", default-features = false }
hkdf = { version = "0.12.3", default-features = false }
hmac = "0.12.1"
argon2 = "0.3"
ope = "0.1.1"
pqc_kyber_edit = { version = "0.7.1", features = ["90s-fixslice"] }
pqc_dilithium_edit = { version = "0.2.0", features = ["mode3", "aes", "random_signing"] }

# key and data export
base64ct = { version = "1.0.1", default-features = false, features = ["alloc"], optional = true }  # must use this version because it is not comp. with password_hash from argon2
pem-rfc7468 = { version = "0.3.1", features = ["alloc"], optional = true }
serde_json = { version = "1.0.81", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

[features]
default = ["aes", "ecies_kyber_hybrid", "ed25519_dilithium_hybrid", "hmac_sha256", "ope_sort", "argon2_hash", "default_env"]

# symmetric encryption
aes = []

# asymmetric encryption
ecies = []
ecies_kyber_hybrid = []

# sign
ed25519 = []
ed25519_dilithium_hybrid = []

# searchable
hmac_sha256 = []

# sortable
ope_sort = []

#pw hash
argon2_hash = []

# Descibe the used env for the crng
default_env = []

wrapper = ["sentc-crypto-utils", "base64ct", "pem-rfc7468", "serde", "serde_json", "sentc-crypto-common"]
full = ["wrapper", "sentc-crypto-utils/encryption"]