[package]
name = "sentc-crypto-std-keys"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Key impl of the classic algorithms that were used pre 0.14.0 of sentc."

include = [
    "Cargo.toml",
    "../LICENSE",
    "src/**/*",
]

[dependencies]
sentc-crypto-core.workspace = true
sentc-crypto-utils = { workspace = true, optional = true }
sentc-crypto-common = { workspace = true, optional = true }

aes-gcm = "0.10.3"
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["fast", "rand_core"] }
rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10.2", default-features = false }
hkdf = { version = "0.12.3", default-features = false }
hmac = "0.12.1"
argon2 = "0.5"
ope = "0.1.1"
pqc_kyber_edit = { version = "0.7.2", features = ["90s-fixslice"] }
pqc_dilithium_edit = { version = "0.2.0", features = ["mode3", "aes", "random_signing"] }

# key and data export
base64ct = { workspace = true, optional = true }  # must use this version because it is not comp. with password_hash from argon2
serde_json = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["aes", "ecies_kyber_hybrid", "ed25519_dilithium_hybrid", "hmac_sha256", "ope_sort", "argon2_hash", "default_env"]

# symmetric encryption
aes = []

# asymmetric encryption
ecies = []
ecies_kyber_hybrid = []

# sign
ed25519 = []
ed25519_dilithium_hybrid = []

# searchable
hmac_sha256 = []

# sortable
ope_sort = []

#pw hash
argon2_hash = []

# Descibe the used env for the crng
default_env = []

wrapper = ["sentc-crypto-utils", "base64ct", "serde", "serde_json", "sentc-crypto-common"]
full = ["wrapper", "sentc-crypto-utils/encryption"]