[package]
name = "sentc_flutter"
version = "0.8.0"
edition = "2021"
description = "The flutter implementation for sentc."
license-file = "../../../LICENSE"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
homepage = "https://sentc.com/"
documentation = "https://sentc.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sentc_flutter"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# own crypto lib
sentc-crypto = {workspace=true, features = ["default"]}

sentc-crypto-full = {workspace=true, features = ["rustls"]}

sentc-crypto-common = {workspace=true}

tokio = { version = "1.20.4", features = ["rt-multi-thread"] }

once_cell = "1.17.0"

# flutter ffi
flutter_rust_bridge = "^1.77.0"

anyhow="1.0.58"