[package]
name = "sentc_flutter"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true

description = "The flutter implementation for sentc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sentc_flutter"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# own crypto lib
sentc-crypto = {workspace=true, features = ["default"]}

sentc-crypto-full = {workspace=true, features = ["default","rustls"]}

sentc-crypto-common = {workspace=true}

tokio = { version = "1.20.4", features = ["rt-multi-thread"] }

once_cell = "1.17.0"

# flutter ffi
flutter_rust_bridge = "^1.77.0"

anyhow="1.0.58"