[package]
name = "sentc_flutter_rust_light"
version = "0.10.0"
edition = "2021"
description = "The flutter implementation for sentc light."
license-file = "../../../LICENSE"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
homepage = "https://sentc.com/"
documentation = "https://sentc.com/"
repository = "https://github.com/sentclose/sentc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sentc_light_flutter"
crate-type = ["staticlib", "cdylib"]

[dependencies]
sentc-crypto-common = {workspace=true}

sentc-crypto-light= {workspace=true, features = ["default"]}
sentc-crypto-light-full={workspace=true, features = ["default","rustls"]}

tokio = { version = "1.20.4", features = ["rt-multi-thread"] }

once_cell = "1.17.0"

# flutter ffi
flutter_rust_bridge = "^1.77.0"

anyhow="1.0.58"